--- a/main.html
+++ b/main.html
@@ -7,6 +7,6 @@
     <title>ModernJS</title>
   </head>
   <body>
-    <script src="JS/modern.js"></script>
+    <script src="JS/Math.js"></script>
   </body>
 </html>
