--- a/main.html
+++ b/main.html
@@ -7,6 +7,7 @@
     <title>ModernJS</title>
   </head>
   <body>
-    <script src="JS/for.js"></script>
+    <script src="JS/fruntions/restParameter.js"></script>
+    <h1>힘내라 힘!!</h1>
   </body>
 </html>
