--- a/homeProject.html
+++ b/homeProject.html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ModernJS</title>
+    <title>HomeProject</title>
+    <script defer src="JS/homeProject/calculate.js"></script>
   </head>
-  <body>
-    <script src="JS/functions/restParameter.js"></script>
-    <h1>힘내라 힘!!</h1>
-  </body>
+  <body></body>
 </html>
