--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
     <title>ModernJS</title>
   </head>
   <body>
-    <script src="JS/functions/restParameter.js"></script>
+    <script src="JS/objects/object.js"></script>
     <h1>힘내라 힘!!</h1>
   </body>
 </html>
