study async,promise,callback

--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
     <title>ModernJS</title>
   </head>
   <body>
-    <script src="JS/array/array-api.js"></script>
+    <script src="JS/async/async.js"></script>
     <h1>힘내라 힘!!</h1>
   </body>
 </html>
