--- a/algorithms.html
+++ b/algorithms.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ALGORITHM</title>
+    <script src="/JS/dataStructures/hash/Intersection.js"></script>
   </head>
   <body>
     <h1>자료구조와 알고리즘 놀이터</h1>
