--- a/homeProject.html
+++ b/homeProject.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HomeProject</title>
-    <script defer src="JS/homeProject/calculate.js"></script>
+    <script defer src="JS/class/Inherit.js"></script>
   </head>
-  <body></body>
+  <body>
+    <h1>Javascript</h1>
+  </body>
 </html>
